# GameFrameWork

./: .gitignore  Build.py  CMakeLists.txt
Client/: .gitignore  CMakeLists.txt
Client/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Client/Assets/AddressableAssetsData/AssetGroupTemplates/: Packed Assets.asset
Client/Assets/AddressableAssetsData/AssetGroups/: Built In Data.asset  Default Local Group.asset  Effect.asset  RpgBattle.asset  ui.asset
Client/Assets/AddressableAssetsData/AssetGroups/Schemas/: Built In Data_PlayerDataGroupSchema.asset  Default Local Group_BundledAssetGroupSchema.asset  Default Local Group_ContentUpdateGroupSchema.asset  Effect_BundledAssetGroupSchema.asset  Effect_ContentUpdateGroupSchema.asset  RpgBattle_BundledAssetGroupSchema.asset  RpgBattle_ContentUpdateGroupSchema.asset  ui_BundledAssetGroupSchema.asset  ui_ContentUpdateGroupSchema.asset
Client/Assets/Code/CS/: Defines.cs  Main.cs  ObjectPool.cs
Client/Assets/Code/CS/Base/: LuaBehaviour.cs
Client/Assets/Code/CS/Base/Quality/: QualityPrefab.cs
Client/Assets/Code/CS/Base/ResSystem/: LuaFilePicker.cs
Client/Assets/Code/CS/Editor/NavMesh/: NavMeshBuilderEditor.cs
Client/Assets/Code/CS/Loader/: YSLoader.cs
Client/Assets/Code/CS/Misc/: BattleEffectConfig.cs  LuaHelper.cs
Client/Assets/Code/CS/Module/: ORCAScene.cs
Client/Assets/Code/CS/Plugins/: GameFrameWorkClientLib.cs
Client/Assets/Code/CS/XLuaGen/: DelegatesGensBridge.cs  EnumWrap.cs  LuaBridgeApplicationWrap.cs  LuaBridgeBaseWrap.cs  LuaBridgeDragable3DWrap.cs  LuaBridgeDragableUIWrap.cs  LuaFilePickerWrap.cs  MapResourceCenterWrap.cs  MapWrap.cs  PacketWrap.cs  SystemCollectionsGenericList1SystemByteWrap.cs  UIContainerWrap.cs  UnityEngineAnimatorWrap.cs  UnityEngineApplicationWrap.cs  UnityEngineAudioSourceWrap.cs  UnityEngineCameraWrap.cs  UnityEngineCanvasRendererWrap.cs  UnityEngineColliderWrap.cs  UnityEngineEventSystemsEventSystemWrap.cs  UnityEngineEventsUnityEventBaseWrap.cs  UnityEngineLineRendererWrap.cs  UnityEngineMaterialWrap.cs  UnityEngineMeshRendererWrap.cs  UnityEngineNetworkingUnityWebRequestWrap.cs  UnityEngineObjectWrap.cs  UnityEngineQualitySettingsWrap.cs  UnityEngineRectTransformWrap.cs  UnityEngineRenderTextureWrap.cs  UnityEngineScreenWrap.cs  UnityEngineShaderWrap.cs  UnityEngineSpriteRendererWrap.cs  UnityEngineSystemInfoWrap.cs  UnityEngineTextureWrap.cs  UnityEngineTransformWrap.cs  WarNetWrap.cs  WrapPusher.cs  XLuaGenAutoRegister.cs  YSLoaderWrap.cs  link.xml
Client/Assets/Code/Lua/: NFScriptSystem.lua  main.lua  pre_main.lua
Client/Assets/Code/Lua/base/: global_func.lua  import.lua  s_coroutine.lua  test.lua  tools.lua
Client/Assets/Code/Lua/base/task/: task_load_asset.lua
Client/Assets/Code/Lua/base/ui/: ui_config.lua  ui_manager.lua
Client/Assets/Code/Lua/config/: config_require.lua  define_hero_basic.lua  define_rpg_battle_buff.lua  define_rpg_battle_effect.lua  define_rpg_battle_group.lua  define_rpg_battle_level.lua  define_rpg_battle_map.lua  define_rpg_battle_monster.lua  define_rpg_battle_skill.lua  define_rpg_event_pool.lua  prop_effect_type.lua  prop_hero_basic.lua  prop_rpg_battle_buff.lua  prop_rpg_battle_effect.lua  prop_rpg_battle_group.lua  prop_rpg_battle_level.lua  prop_rpg_battle_map.lua  prop_rpg_battle_monster.lua  prop_rpg_battle_skill.lua  prop_rpg_event.lua  prop_rpg_event_pool.lua
Client/Assets/Code/Lua/framework/: file_system.lua
Client/Assets/Code/Lua/modules/audio/: module_audio.lua
Client/Assets/Code/Lua/modules/rpg_battle_client/: module_rpg_battle_client.lua
Client/Assets/Code/Lua/ui/rpg_battle/: ui_rpg_battle_main.lua
Client/Assets/NFDataCfg/proto/: NFDefine.cs  NFMsgBase.cs  NFMsgPreGame.cs  NFMsgShare.cs
Client/Assets/Res/Effect/Tmp/: ef_tmp_test.prefab
Client/Assets/Res/Model/RpgBattle/hero_dizaozheaidehua/: ac_hero_dizaozheaidehua_ride.overrideController  ac_model_hero_dizaozheaidehua_animator.controller  hero_dizaozheaidehua_ride.prefab  hero_dizaozheaidehua_ride_preview.prefab  mat_hero_dizaozheaidehua_ride.mat  mat_model_hero_dizaozheaidehua_animator.mat  mat_model_hero_dizaozheaidehua_animator_cityOutside.mat  mat_model_hero_dizaozheaidehua_animator_room.mat  model_hero_dizaozheaidehua@run01_npc.FBX  (+12 more)
Client/Assets/Res/RenderPipeline/: New Universal Render Pipeline Asset.asset
Client/Assets/Res/ui/rpg_battle/: ui_rpg_battle_main.prefab
Client/Assets/Scenes/: SampleScene.unity
Client/Assets/XLua/Src/Editor/: HugulaXluaConfig.cs
Client/CPP/: NFClient.cpp  NFClient.h  NFClientLib.cpp
Client/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  TagManager.asset
Client/UserSettings/: EditorUserSettings.asset
Client/UserSettings/Layouts/: default-2021.dwlt  default-2022.dwlt
ClientWin/: CMakeLists.txt
Common/CPP/Dependencies/libevent/: CMakeLists.txt
Common/CPP/Dependencies/xlua/shared/: CMakeLists.txt
Common/CPP/NFComm/GamePlugin/: CMakeLists.txt  GameAction.h  GameEntityGroup.cpp  GameEntityGroup.h  GamePlugin.cpp  GamePlugin.h
Common/CPP/NFComm/GamePlugin/GameMapModule/: GameComponent.h  GameEntity.h  GameMapInclude.h  GameMapModule.cpp  GameMapModule.h
Common/CPP/NFComm/NFLuaScriptPlugin/: CMakeLists.txt  NFLuaPBModule.h  NFLuaRequire.h  NFLuaScriptModule.cpp  NFLuaScriptModule.h  NFLuaScriptPlugin.vcxproj
Common/CPP/NFComm/NFPluginLoader/: CMakeLists.txt  NFPluginLoader.vcxproj  NFPluginManager.cpp  NFPluginServer.cpp  NFPluginServer.h
Server/: CMakeLists.txt
Server/CPP/: NFServer.cpp  NFServer.h
Server/Lua/config/: define_hero_basic.lua  define_rpg_battle_buff.lua  define_rpg_battle_effect.lua  define_rpg_battle_group.lua  define_rpg_battle_level.lua  define_rpg_battle_monster.lua  define_rpg_battle_skill.lua  define_rpg_event.lua  prop_effect_type.lua  prop_hero_basic.lua  prop_rpg_battle_buff.lua  prop_rpg_battle_effect.lua  prop_rpg_battle_group.lua  prop_rpg_battle_level.lua  prop_rpg_battle_map.lua  prop_rpg_battle_monster.lua  prop_rpg_battle_skill.lua  prop_rpg_event.lua  prop_rpg_event_pool.lua
(+339 files in other folders)
